--- a/src/components/header.css
+++ b/src/components/header.css
@@ -18,7 +18,7 @@ header.scrolled{
     padding: 10px 100px;
 }
 header .logo{
-   /* font-family: cursive; */
+   font-family: 'Great Vibes', cursive;
     font-size: 36px;
     color: #fff;
 
